syntax = "proto3";

package posts;

service Posts {
	rpc Save(SaveRequest) returns (SaveResponse) {}
	rpc Query(QueryRequest) returns (QueryResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message SaveRequest {
	string id = 1;
	string title = 2;
	string slug = 3;
	string content = 4;
	int64 timestamp = 5;
	repeated string tags = 6;
}

message SaveResponse {
	string id = 1;
}

message Post {
	string id = 1;
	string title = 2;
	string slug = 3;
	string content = 4;
	int64 created = 5;
	int64 updated = 6;
	string author = 7;
	repeated string tags = 8;
}

// Query posts. Acts as a listing when no id or slug provided.
// Gets a single post by id or slug if any of them provided.
message QueryRequest {
	string id = 1;
	string slug = 2;
	string tag = 3;
	int64 offset = 4;
	int64 limit = 5;
}

message QueryResponse {
	repeated Post posts = 1;
}

message DeleteRequest {
	string id = 1;
}

message DeleteResponse {}